[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Friends.gd" type="Script" id=2]

[node name="Friends" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="FindButton" type="Button" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 209.0
margin_top = 302.0
margin_right = 509.0
margin_bottom = 452.0
text = "Szukaj"

[node name="Notification" type="Label" parent="Background"]
margin_left = 53.0
margin_top = 300.0
margin_right = 703.0
margin_bottom = 366.0

[node name="AddButton" type="Button" parent="Background"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 210.0
margin_top = 1753.0
margin_right = 510.0
margin_bottom = 1903.0
text = "Dodaj"

[node name="PanelContainer" type="PanelContainer" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_top = 490.0
margin_right = 510.0
margin_bottom = 1690.0
rect_min_size = Vector2( 1000, 1200 )

[node name="ScrollContainer" type="ScrollContainer" parent="Background/PanelContainer"]
margin_right = 1010.0
margin_bottom = 1200.0
rect_min_size = Vector2( 1000, 1200 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/PanelContainer/ScrollContainer"]
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
margin_left = 50.0
margin_top = 185.0
margin_right = 1050.0
margin_bottom = 285.0

[node name="PatternInput" type="LineEdit" parent="Background/HBoxContainer"]
margin_right = 1000.0
margin_bottom = 100.0
rect_min_size = Vector2( 1000, 100 )
align = 1
placeholder_text = "Szukaj"

[node name="BackButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -331.0
margin_top = -936.0
margin_right = -31.0
margin_bottom = -786.0
text = "Powr√≥t"

[connection signal="pressed" from="Background/FindButton" to="." method="_on_FindButton_pressed"]
[connection signal="pressed" from="Background/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
